--- a/New folder (2)/assets/css/style_XI_home.css
+++ b/New folder (2)/assets/css/style_XI_home.css
@@ -69,9 +69,9 @@ section {
 }
 
 #heading-link-XI-Arts::before {
-    content: "";
+    content:"";
     background: url(../imgs/arts_Title_bg.jpg) no-repeat;
-    background-size:100% 500%;
+    background-size:cover;
     position: absolute;
     top: 0px;
     right: 0px;
