Updated Navbar and removed incomplete page
Resolved issue with Navbar in the News section and updated some other pages as well

--- a/New folder (2)/assets/css/news.css
+++ b/New folder (2)/assets/css/news.css
@@ -125,7 +125,8 @@ section {
 }
 
 .header .navbar {
-    position: relative;
+    margin-bottom: 0px;
+    min-height: 0px;
 }
 
 .header .navbar #close-navbar {
