updated economics career page
updated economics career page and some other minor changes

--- a/New folder (2)/assets/css/career_sub.css
+++ b/New folder (2)/assets/css/career_sub.css
@@ -281,6 +281,13 @@ section {
     color: #fff;
 }
 
+.column {
+    width: 50%;
+}
+.slide {
+    height: 25%;
+}
+
 .home-courses .slide {
     text-align: center;
     position: relative;
@@ -299,6 +306,7 @@ section {
 
 .home-courses .slide .image img {
     width: 100%;
+    height: 225px;
     margin-bottom: 1.5rem;
 }
 
